--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gulp-svgstore": "9.0.0",
     "gulp-webp": "4.0.1",
     "postcss": "8.4.14",
+    "prettier": "^2.7.1",
     "sass": "1.53.0",
     "stylelint": "13.13.1",
     "webpack": "4.42.0",
@@ -55,8 +56,5 @@
   },
   "engines": {
     "node": ">=16.15.1"
-  },
-  "dependencies": {
-    "pristinejs": "^0.1.9"
   }
 }
